@@ -13,7 +13,7 @@ Updated to zlib 1.2.11
 *** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta for all the LTD and Taito games and clones
 New:
 LTD: Arizona, Columbia, Cowboy Eight Ball, Disco Dancing, Force, Haunted Hotel, Hustler, Martian Queen, King Kong, Space Poker, Time Machine, Trick Shooter, Viking King
-Taito: Volley (formerly known as Voley Ball and missing most dumps)
+Taito: Volley (formerly known as Voley Ball and was missing most dumps)
 
 Clones:
 Amazon Hunt II (French Free Play)
@@ -54,6 +54,8 @@ Diamond Lady (German Free Play)
 Excalibur
 Excalibur (Free Play)
 Excalibur (French Free Play)
+Excalibur (German)
+Excalibur (German Free Play)
 Genesis (Free Play)
 Genesis (French)
 Genesis (French Free Play)
